--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
     </nav>
 
     <!-- Contenido principal -->
-    <div class="container mt-5">
-        <h2 class="text-center">Órdenes</h2>
+   <div class="container mt-5">
+        <h2 class="text-center">Orders</h2>
         <div class="border border-md p-3 text-center">
-            <p><strong>Última orden solicitada:</strong></p>
+            <p><strong>Last requested order:</strong></p>
             <p id="lastOrderText"></p>
         </div>
 
-    <!-- Plano -->
+    <!-- Plan -->
         <div class="container mt-5">
-            <h2 class="text-center">Plano de la casa</h2>
+            <h2 class="text-center">House Plan</h2>
             <div class="border border-md p-3 text-center">
         <!-- Contenedor del plano -->
             <div class="image-container2 position-relative">
@@ -238,7 +238,7 @@
     <!-- Pie de página -->
     <footer class="footer fixed-bottom">
         <div class="container text-center">
-            <span>© 2024 Mi Aplicación Adriel E. Lorenzo</span>
+           <span>© 2024 My Application Adriel E. Lorenzo</span>
         </div>
     </footer>
 
